[gd_scene load_steps=15 format=2]

[ext_resource path="res://tres/central_panel_style.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/ui/level_star.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/ResultPanel.gd" type="Script" id=8]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/sfx/fireworks-1.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/level_complete.ogg" type="AudioStream" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.76129, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="ResultPanel" type="PanelContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 2 )
anims/disappear = SubResource( 3 )

[node name="SFX" type="Node" parent="."]

[node name="LevelClear" type="AudioStreamPlayer" parent="SFX"]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -10.0

[node name="Fireworks" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )
volume_db = 10.0

[node name="CenterC" type="CenterContainer" parent="."]
margin_left = 448.0
margin_top = 200.0
margin_right = 832.0
margin_bottom = 520.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelC" type="PanelContainer" parent="CenterC"]
margin_right = 384.0
margin_bottom = 320.0
size_flags_horizontal = 4
custom_styles/panel = ExtResource( 1 )

[node name="VBoxC" type="VBoxContainer" parent="CenterC/PanelC"]
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 384, 320 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterC/PanelC/VBoxC"]
margin_right = 384.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 5 )
text = "Clear"
align = 1
valign = 1

[node name="Coin" type="Button" parent="CenterC/PanelC/VBoxC"]
margin_left = 128.0
margin_top = 120.0
margin_right = 256.0
margin_bottom = 184.0
rect_min_size = Vector2( 128, 64 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 6
custom_styles/normal = SubResource( 6 )
text = "0"
icon = ExtResource( 2 )
expand_icon = true

[node name="OK" type="Button" parent="CenterC/PanelC/VBoxC"]
margin_top = 256.0
margin_right = 384.0
margin_bottom = 320.0
rect_min_size = Vector2( 256, 64 )
text = "OK"

[node name="Fireworks" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="CenterLeft" type="Control" parent="Fireworks"]
anchor_top = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireworks" type="CPUParticles2D" parent="Fireworks/CenterLeft"]
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 0, 360 )
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 100.0
angular_velocity_random = 0.5
angle = 720.0
angle_random = 1.0
scale_amount = 10.0
scale_amount_curve = SubResource( 8 )
color_ramp = SubResource( 7 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="CenterRight" type="Control" parent="Fireworks"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireworks" type="CPUParticles2D" parent="Fireworks/CenterRight"]
emitting = false
amount = 100
lifetime = 3.0
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 0, 360 )
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 100.0
angular_velocity_random = 0.5
angle = 720.0
angle_random = 1.0
scale_amount = 10.0
scale_amount_curve = SubResource( 9 )
color_ramp = SubResource( 7 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="AnimTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_ResultPanel_visibility_changed"]
[connection signal="animation_finished" from="AnimPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CenterC/PanelC/VBoxC/OK" to="." method="_on_OK_pressed"]
